tests/constructor/constructor.exp
Error ---------------------------------------------------------------------------------------------- constructor.js:6:19

Cannot expect number as the return type of function because number [1] is incompatible with implicitly-returned
undefined.

   6|     constructor():number { }
                        ^^^^^^ [1]


Error ---------------------------------------------------------------------------------------------- constructor.js:15:2

Cannot cast `new Foo(...)` to `Bar` because in type argument `T`, number [1] is incompatible with string [2].

   constructor.js:15:2
   15| (new Foo(123): Bar<string>); // error, number !~> string
        ^^^^^^^^^^^^

References:
   constructor.js:15:10
   15| (new Foo(123): Bar<string>); // error, number !~> string
                ^^^ [1]
   constructor.js:15:20
   15| (new Foo(123): Bar<string>); // error, number !~> string
                          ^^^^^^ [2]


Error ---------------------------------------------------------------------------------------------- constructor.js:22:2

Cannot cast `new Baz(...)` to `Baz` because in type argument `T`, number [1] is incompatible with string [2].

   constructor.js:22:2
   22| (new Baz(123): Baz<string>); // error, number !~> string
        ^^^^^^^^^^^^

References:
   constructor.js:22:10
   22| (new Baz(123): Baz<string>); // error, number !~> string
                ^^^ [1]
   constructor.js:22:20
   22| (new Baz(123): Baz<string>); // error, number !~> string
                          ^^^^^^ [2]



Found 3 errors
